--- a/index.html
+++ b/index.html
@@ -1,2 +1,87 @@
-<h1>Hello I am Mohitkumar Vora</h1>
-<h3>I am Manual Tester and having Python Automation Knowledge</h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mohitkumar Vora - QA Engineer</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Configure Tailwind for Catppuccin Latte (Cream/Light theme) -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            },
+            colors: {
+              cat: {
+                base: '#eff1f5',
+                mantle: '#e6e9ef',
+                crust: '#dce0e8',
+                text: '#4c4f69',
+                subtext1: '#5c5f77',
+                subtext0: '#6c6f85',
+                overlay2: '#7c7f93',
+                overlay1: '#8c8fa1',
+                overlay0: '#9ca0b0',
+                surface2: '#acb0be',
+                surface1: '#bcc0cc',
+                surface0: '#ccd0da',
+                rosewater: '#dc8a78',
+                flamingo: '#dd7878',
+                pink: '#ea76cb',
+                mauve: '#8839ef',
+                red: '#d20f39',
+                maroon: '#e64553',
+                peach: '#fe640b',
+                yellow: '#df8e1d',
+                green: '#40a02b',
+                teal: '#179299',
+                sky: '#04a5e5',
+                sapphire: '#209fb5',
+                blue: '#1e66f5',
+                lavender: '#7287fd',
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <style>
+      /* Smooth scrolling */
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        background-color: #eff1f5;
+        color: #4c4f69;
+      }
+      .glass-nav {
+        background: rgba(239, 241, 245, 0.85);
+        backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
+      }
+    </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+  }
+}
+</script>
+</head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
+</html>
